# cpfp-me

./: .gitignore  Caddyfile  Cargo.toml  Dockerfile  compose.prod.yaml  compose.yaml  config.example.toml  config.mainnet.toml  config.prod.toml  deploy.sh
src/: broadcast.rs  child.rs  cleanup.rs  config.rs  demo.rs  error.rs  fees.rs  lib.rs  main.rs  payment.rs  routes.rs  state.rs  test_wallet.rs  validate.rs  wallet.rs
static/: app.js  index.html  style.css
tests/: regtest.rs
